[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Images/Coconut button.png" type="Texture" id=1]
[ext_resource path="res://Game Objects/CJL-GameObjects/Tween Example.gd" type="Script" id=2]

[node name="TweenExample" type="Control"]
anchor_right = 0.889
anchor_bottom = 0.735
margin_right = -1706.88
margin_bottom = -793.8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LucyTween" type="Tween" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 284.482
margin_top = 78.0437
margin_right = 480.482
margin_bottom = 239.044

[node name="DavePix" type="Sprite" parent="."]
position = Vector2( 387.701, 478.333 )
texture = ExtResource( 1 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
